[package]
name = "parcelona_macros_derive"
version = "0.2.0"
authors = ["Cergoo"]
edition = "2021"
description = "parcelona internal macro crate"
license = "MIT"
repository = "https://github.com/Cergoo/parcelona"

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[lib]
proc-macro = true
